primer dia del curso intro front

--- a/etiquetas.html
+++ b/etiquetas.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTRO FRONTEND</title>
+    <title>ETIQUETAS</title>
 </head>
 <body>
-    <section>
-        <h1>PLATZI</h1>
-        <p>tiene una comunidad</p>
+    <nav>
         <ul>
-            <li>maravillosa</li>
-            <li>increible</li>
+            <li>obut us</li>
+            <li>contect us</li>
         </ul>
-    </section>
-    
+    </nav>
 </body>
 </html>
