--- a/semantic.html
+++ b/semantic.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INTRO FRONTEND</title>
+    <title>SEMANTIC</title>
 </head>
 <body>
-    <section>
-        <h1>PLATZI</h1>
-        <p>tiene una comunidad</p>
-        <ul>
-            <li>maravillosa</li>
-            <li>increible</li>
-        </ul>
-    </section>
     
 </body>
 </html>
