iniciando segundo dia imagen gato

--- a/etiquetas.html
+++ b/etiquetas.html
@@ -13,5 +13,22 @@
             <li>contect us</li>
         </ul>
     </nav>
+    <section>
+        <div>
+            <img src="https://images.fineartamerica.com/images-medium-large-5/and-two-milk-please-roeselien-raimond.jpg" alt="GATO">
+        </div>
+        <div>
+            <h1>GATOS</h1>
+            <p>cats are awesome</p>
+        </div>
+    </section>
+    <form action="">
+        <label for="name">NAME</label>
+        <input type="text" id="name">
+    </form>
+    <a href="https://platzi.com/clases/2467-frontend-developer/40833-etiquetas-de-html-mas-usadas/">IR A LA CLASE</a>
 </body>
 </html>
+
+
+
