FINAL CLASE GRID

--- a/display-1 clase 11.html
+++ b/display-1 clase 11.html
@@ -9,7 +9,7 @@
 
         div {background: salmon; width: 200px; height: 200px; margin: 20px;}
         a {background: blue; width: 200px; height: 200px; margin: 20px; color: aquamarine;}
-        button {background: blueviolet; width: 200px; height: 200px; margin: 20px; color: aquamarine;}
+        button {background: blueviolet; width: 200px; height: 200px;}
 
 
     </style>
