FINAL DEL CURSO

--- a/10modelo-de-caja claase 13.html
+++ b/10modelo-de-caja claase 13.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>CAJA</title>
 
     <style>
         div {width: 200px; height: 200px; background: plum;
             padding: 20px; 
-            box-sizing: border-box;
+            box-sizing: border-box; /*evita que sume la medida de la caja con los bordes y mantenga la caja de la medida colocada*/
             border: 3px solid blue;
             margin: 20px;}
 
