--- a/14unidades de medida clase 18.html
+++ b/14unidades de medida clase 18.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>UNIDADES DE MEDIDA</title>
 
     <style>
-        html {font-size: 62.5%;}
-        body {margin: 0;}
+        html {font-size: 62.5%;}/*ajusta que 1rm = 10px eliminando el font size que trae por defecto de 1rm = 16px*/
+        body {margin: 0;}/*modifica a cero el margen que trae por defecto la pagina*/
 
         div {width: 100px; height: 100px; background: palegreen;}
 
         p {font-size: 1rem;} 
 
         .container { background: blue; 
-                    width: 100vw;  
-                    height: 100vh;}
+                    width: 100vw;  /*extiende hacia la derecha la caja toda esa medida*/
+                    height: 100vh;}/*extiende hacia abajo la caja toda esa medida*/ 
 
     </style>
 
