--- a/4selectores-3 clase 9.html
+++ b/4selectores-3 clase 9.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+
     <title>pseudo clases pseudoelemento</title>
 
     <style>
@@ -11,6 +12,7 @@
         p:hover {color: orange;}
 
         div p:nth-child(2){color: violet;}
+        div h3:nth-child(4){color: blue; background: plum;}
 
         p::first-letter {color: orangered;}
         p::before {content: "###";}
@@ -27,8 +29,10 @@
             <p>PLATZI</p>
             <P>MASTER</P>
             <P>LO MEJOR</P>
+            <h3>sin hover</h3>
         </div>
         <input type="text" placeholder="escribe">
 
 </body>
+
 </html>
