--- a/5display-1 clase 11.html
+++ b/5display-1 clase 11.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DISPLAY</title>
-    <style>
 
+    <title>DISPLAY</title>
+    
+    <style>
+        body {margin: 0;}
+        
         div {background: salmon; width: 200px; height: 200px; margin: 20px;}
         a {background: blue; width: 200px; height: 200px; margin: 20px; color: aquamarine;}
         button {background: blueviolet; width: 200px; height: 200px;}
