--- a/15diseno responsivo 19.html
+++ b/15diseno responsivo 19.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>RESPONSIVO MEDIA</title>
 
     <style>
-        div {background: purple;} /*color base del renglon*/
+        div {background: purple;} /*color base del renglon/caja*/
         
-        @media(min-width: 401px) {div {background: red;}} 
-        @media(max-width: 300px) {div {background: blue;}}
-        /*cuando crece la pantalla cambia el color pasando encima del color base*/
+        @media(min-width: 401px) {div {background: red;}} /*DESDE*/
+        @media(max-width: 300px) {div {background: blue;}}/*HASTA*/
+        /*dependiendo del crecimiento de la pantalla cambia el color pasando encima del color base*/
 
     </style>
 
